@@ -17,6 +17,7 @@ Version 1.1.2 to be released
 - Bug: RBAC rules with bizRule and caching enabled worked wrong (Sam Dark)
 - Enh #943: dynamic AR relations (Sam Dark)
 - Enh #946: Added a new parameter to CBaseController::widget() method to allow capturing the output of the widget (Qiang)
+- Enh #977: Added CModel::prependValidator() and CModel::appendValidator() to allow adding rules on the fly (Sam Dark) 
 - Enh #1009: Allow quoted columns in CDbCriteria::select when performing relational query (Qiang)
 - Enh #1025: added 'uncheckValue' option to CHtml::radioButton() and CHtml::checkBox() (Jonah)
 - Enh #1042: CForm __construct now uses setModel() instead of assigning _model directly (Sam Dark)
